--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!-- <meta http-equiv="refresh" content="0; url=https://www.behance.net/yourusername"> -->
   <title>Redirecting...</title>
+  <script>
+    window.location.href = "https://www.behance.net/madhuramenad7b";
+  </script>
 </head>
 <body>
-  <p>If you are not redirected automatically, <a href="https://www.behance.net/yourusername">click here</a>.</p>
+  <p>If you are not redirected, <a href="https://www.behance.net/madhuramenad7b">click here</a>.</p>
 </body>
 </html>
